k8s/client-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    component: web
