k8s/postgres-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    component: postgres
